<resources>
    <string name="app_name">Pharmacy App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Full Name</string>
    <string name="verify_password">Verify Password</string>
</resources>
